@@ -7229,8 +7229,11 @@ td.nowrap.has-context {
 	vertical-align: top;
 }
 .tooltip {
-	Width: 200px;
+	width: 200px;
 }
 .tooltip-inner {
 	white-space: pre-wrap;
+}
+#permissions-sliders .chzn-container {
+	position: absolute;
 }
