@@ -720,8 +720,13 @@ td.nowrap.has-context{
 
 /* Allowing bootstrap tooltips to wrap */
 .tooltip {
-	Width: 200px;
+	width: 200px;
 }
 .tooltip-inner {
 	white-space: pre-wrap;
+}
+
+/* Permissions dropdown display */
+#permissions-sliders .chzn-container {
+	position: absolute;
 }
